--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -3,7 +3,7 @@ name: Build and Deploy React App to Hostinger
 on:
   push:
     branches:
-      - main   # Deploy when pushing to main branch
+      - main # Deploy when pushing to main branch
 
 jobs:
   build-and-deploy:
@@ -16,7 +16,7 @@ jobs:
       - name: Set up Node.js
         uses: actions/setup-node@v4
         with:
-          node-version: '20'
+          node-version: "20"
 
       - name: Install dependencies
         run: npm ci
@@ -32,5 +32,5 @@ jobs:
           password: ${{ secrets.HOSTINGER_FTP_PASSWORD }}
           port: 21
           server-dir: ${{ secrets.HOSTINGER_REMOTE_DIR }}
-          local-dir: dist
+          local-dir: dist/ # ✅ add the trailing slash
           dangerous-clean-slate: true
