--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -31,6 +31,6 @@ jobs:
           username: ${{ secrets.HOSTINGER_FTP_USERNAME }}
           password: ${{ secrets.HOSTINGER_FTP_PASSWORD }}
           port: 21
-          server-dir: ${{ secrets.HOSTINGER_REMOTE_DIR }}
+          server-dir: public_html/
           local-dir: dist/ # ✅ add the trailing slash
           dangerous-clean-slate: true
